[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://textures/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://sounds/sound_jump.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/sound_shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=6]
[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://textures/osb_left.png" type="Texture" id=8]
[ext_resource path="res://textures/osb_right.png" type="Texture" id=9]
[ext_resource path="res://textures/osb_jump.png" type="Texture" id=10]
[ext_resource path="res://textures/osb_fire.png" type="Texture" id=11]
[ext_resource path="res://scenes/timer.tscn" type="PackedScene" id=12]
[ext_resource path="res://animations/bosses/dialog.tres" type="Animation" id=13]
[ext_resource path="res://animations/cutscenes/next_level.tres" type="Animation" id=14]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=15]
[ext_resource path="res://scenes/GameUI.tscn" type="PackedScene" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.81836
height = 44.4787

[sub_resource type="Animation" id=2]
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=3]
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=5]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=11]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.291992, -0.835023 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 0.291992, -0.835023 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 4

[node name="smoke" type="Node2D" parent="sprite"]
position = Vector2( 20.7312, 3.21187 )
rotation = -1.45648

[node name="bullet_shoot" type="Position2D" parent="sprite"]
position = Vector2( 30.6589, 6.13176 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/crouch = SubResource( 2 )
anims/falling = SubResource( 3 )
anims/falling_weapon = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/idle_weapon = SubResource( 6 )
anims/jumping = SubResource( 7 )
anims/jumping_weapon = SubResource( 8 )
anims/run = SubResource( 9 )
anims/run_weapon = SubResource( 10 )
anims/standing_weapon_ready = SubResource( 11 )

[node name="camera" type="Camera2D" parent="." groups=[
"Persist",
]]
current = true
limit_left = 0
limit_top = 0
smoothing_enabled = true
smoothing_speed = 3.5
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.291992, -0.835023 )
shape = SubResource( 1 )

[node name="sound_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="ui" type="CanvasLayer" parent="."]
layer = 0

[node name="ProgressBar" type="ProgressBar" parent="ui"]
margin_top = 57.0
margin_right = 76.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 6 )
value = 100.0

[node name="coin" parent="ui" instance=ExtResource( 7 )]
position = Vector2( 10.5185, 10.9629 )

[node name="Coins_points" type="RichTextLabel" parent="ui"]
margin_left = 20.7037
margin_top = -2.55556
margin_right = 60.7037
margin_bottom = 28.4444
custom_fonts/normal_font = ExtResource( 6 )

[node name="left" type="TouchScreenButton" parent="ui"]
position = Vector2( 27.759, 490 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="ui"]
position = Vector2( 121.542, 490 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 9 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="ui"]
position = Vector2( 900, 490 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 10 )
action = "jump"
visibility_mode = 1

[node name="fire" type="TouchScreenButton" parent="ui"]
position = Vector2( 900, 399 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 11 )
action = "shoot"
visibility_mode = 1

[node name="timer" parent="ui" instance=ExtResource( 12 )]
margin_left = 3.25061
margin_top = 28.625
margin_right = -930.749
margin_bottom = -543.375

[node name="ColorRect" type="ColorRect" parent="ui"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui"]
anims/dialog = ExtResource( 13 )
anims/next_level = ExtResource( 14 )

[node name="RichTextLabel" type="RichTextLabel" parent="ui"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -386.625
margin_top = -83.8751
margin_right = 395.375
margin_bottom = 37.1249
theme = ExtResource( 15 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]
Ha ha ha!
You'll never defeat me!
[/center]"
text = "
Ha ha ha!
You'll never defeat me!
"

[node name="GameUI" parent="ui" instance=ExtResource( 16 )]

[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
